--- a/src/app/life-hacks/life-hacks.component.html
+++ b/src/app/life-hacks/life-hacks.component.html
@@ -1,36 +1,12 @@
-<!doctype html>
-<html lang='ru'>
-<head>
-  <meta charset='UTF-8'>
-  <meta name='viewport'
-        content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
-  <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-  <title>Swoosh</title>
-  <link rel='stylesheet' href='css/style.css'>
-</head>
-<body class='article'>
 <header>
   <div class='wrapper'>
-    <div class='box'>
-      <div class='logo'>
-        <a href='index.html'><img src='img/logo.svg' alt='Swoosh'></a>
-      </div>
-      <nav>
-        <ul>
-          <li><a href='page.html'>Статьи</a></li>
-          <li><a href='page2.html'>Лайфхаки</a></li>
-          <li><a href='page3.html'>Обзоры</a></li>
-          <li><a href='page4.html'>Личности</a></li>
-        </ul>
-      </nav>
-    </div>
     <div class='banner'>
       <div class='teg'>
         <a href='#'>SOS</a>
         <a href='#'>Обслуживание</a>
       </div>
       <div class='img'>
-        <img src='img/img17.jpeg' alt=''>
+        <img src='assets/img/img17.jpeg' alt=''>
       </div>
       <div class='box'>
         <div class='zag'>Заправился не тем топливом: что делать?</div>
@@ -91,7 +67,7 @@
         </div>
       </div>
       <div class='right'>
-        <img src='img/img18.jpg' alt=''>
+        <img src='assets/img/img18.jpg' alt=''>
       </div>
     </div>
     <div class='blockquote'>«Попытка завести двигатель автомобиля после заправки неподходящим топливом может нанести
@@ -115,7 +91,7 @@
         </div>
       </div>
       <div class='right'>
-        <img src='img/img18-1.jpg' alt=''>
+        <img src='assets/img/img18-1.jpg' alt=''>
       </div>
     </div>
     <!-- Конец статьи -->
@@ -134,59 +110,23 @@
       </div>
       <div class='right'>
         <a href='#'>
-          <img src='img/vk.svg' alt=''>
+          <img src='assets/img/vk.svg' alt=''>
           <span>ВКонтакте</span>
         </a>
         <a href='#'>
-          <img src='img/ya.svg' alt=''>
+          <img src='assets/img/ya.svg' alt=''>
           <span>Яндекс.Дзен</span>
         </a>
         <a href='#'>
-          <img src='img/tg.svg' alt=''>
+          <img src='assets/img/tg.svg' alt=''>
           <span>Telegram</span>
         </a>
         <a href='#'>
-          <img src='img/mail.svg' alt=''>
+          <img src='assets/img/mail.svg' alt=''>
           <span>Mail.ru</span>
         </a>
       </div>
     </div>
   </div>
 </section>
-<footer>
-  <div class='wrapper'>
-    <div class='box'>
-      <div class='left'>
-        <div class='logo'>
-          <img src='img/logo2.svg' alt=''>
-        </div>
-        <div class='item'>
-          <span>Авторы</span>
-          <ul>
-            <li>Дрозденко Софья</li>
-            <li>Толкачева Татьяна</li>
-          </ul>
-        </div>
-        <div class='item'>
-          <span>Кураторы</span>
-          <ul>
-            <li>Каем Софья</li>
-            <li>Комкова Анна</li>
-          </ul>
-        </div>
-      </div>
-      <div class='right'>
-        <ul>
-          <li><a href='page.html'>Статьи</a></li>
-          <li><a href='page2.html'>Лайфхаки</a></li>
-          <li><a href='page3.html'>Обзоры</a></li>
-          <li><a href='page4.html'>Личности</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</footer>
-<script src='js/jquery-3.6.3.min.js'></script>
-<script src='js/main.js'></script>
-</body>
-</html>
+
