--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="box">
       <div class="item">
-        <a href="page.html">
+        <a routerLink="">
                         <span class="img">
                             <img src="assets/img/img1.jpg" alt="">
                         </span>
