--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -16,129 +16,24 @@
 <section class="sec-6">
   <div class="wrapper">
     <div class="box">
-      <label class="checkbox-filter">
+      <label class="checkbox-filter" *ngFor="let category of categories">
         <input type="checkbox" name="teg1" class="checkbox-input">
-        <span class="checkbox-content">Зима</span>
-      </label>
-      <label class="checkbox-filter">
-        <input type="checkbox" name="teg2" class="checkbox-input">
-        <span class="checkbox-content">Обслуживание</span>
-      </label>
-      <label class="checkbox-filter">
-        <input type="checkbox" name="teg3" class="checkbox-input">
-        <span class="checkbox-content">Путешествия</span>
-      </label>
-      <label class="checkbox-filter">
-        <input type="checkbox" name="teg4" class="checkbox-input">
-        <span class="checkbox-content">Безопасность</span>
-      </label>
-      <label class="checkbox-filter">
-        <input type="checkbox" name="teg5" class="checkbox-input">
-        <span class="checkbox-content">ПДД</span>
-      </label>
-      <label class="checkbox-filter">
-        <input type="checkbox" name="teg6" class="checkbox-input">
-        <span class="checkbox-content">ДТП</span>
-      </label>
-      <label class="checkbox-filter">
-        <input type="checkbox" name="teg7" class="checkbox-input">
-        <span class="checkbox-content">SOS</span>
-      </label>
-      <label class="checkbox-filter">
-        <input type="checkbox" name="teg8" class="checkbox-input">
-        <span class="checkbox-content">Тюнинг</span>
+        <span class="checkbox-content">{{category}}</span>
       </label>
     </div>
     <div class="box content-wrapper">
-      <div class="item" data-rubric1="teg4" data-rubric2="teg6">
-        <a routerLink="articles">
-                    <span class="img">
-                        <img src="assets/img/img1.jpg" alt="">
-                    </span>
-          <span class="teg">
-                        <span>Безопасность</span>
-                        <span>ДТП</span>
-                    </span>
+      <div class="item" data-rubric1="teg4" data-rubric2="teg6" *ngFor="let article of articles">
+        <a (click)="checkArticle(article)">
+          <span class="img">
+            <img [ngSrc]="article.image" alt="" fill>
+          </span>
+          <span class="teg" >
+            <span *ngFor="let type of article.type">{{type}}</span>
+          </span>
           <span class="content">
-                        <span class="zag">Что делать при ДТП?</span>
-                        <span class="text">Как правильно оформить ДТП, кого <br>и как вызывать расскажем в статье</span>
-                    </span>
-        </a>
-      </div>
-      <div class="item" data-rubric1="teg2" data-rubric2="teg7">
-        <a routerLink="articles">
-                    <span class="img">
-                        <img src="assets/img/img2.jpg" alt="">
-                    </span>
-          <span class="teg">
-                        <span>SOS</span>
-                        <span>Обслуживание</span>
-                    </span>
-          <span class="content">
-                        <span class="zag">заправился не тем топливом</span>
-                        <span class="text">Какие действия предпринять, <br>чтобы спасти машину и кошелек</span>
-                    </span>
-        </a>
-      </div>
-      <div class="item" data-rubric1="teg5" data-rubric2="teg8">
-        <a routerLink="articles">
-                    <span class="img">
-                        <img src="assets/img/img13.jpeg" alt="">
-                    </span>
-          <span class="teg">
-                        <span>Тюнинг</span>
-                        <span>ПДД</span>
-                    </span>
-          <span class="content">
-                        <span class="zag">жирные или без флага? А законно ли это?</span>
-                        <span class="text">Законно ли вешать такие номера и что за это может <br>грозить — расскажем в статье</span>
-                    </span>
-        </a>
-      </div>
-      <div class="item" data-rubric1="teg4" data-rubric2="teg6">
-        <a routerLink="articles">
-                    <span class="img">
-                        <img src="assets/img/img14.jpeg" alt="">
-                    </span>
-          <span class="teg">
-                        <span>Безопасность</span>
-                        <span>ДТП</span>
-                    </span>
-          <span class="content">
-                        <span class="zag">Как оформить европротокол?</span>
-                        <span class="text">Как правильно оформить ДТП, что <br>и где заполнять расскажем в статье</span>
-                    </span>
-        </a>
-      </div>
-      <div class="item" data-rubric1="teg2">
-        <a routerLink="articles">
-                    <span class="img">
-                        <img src="assets/img/img15.jpeg" alt="">
-                    </span>
-          <span class="teg">
-                        <span>Обслуживание</span>
-                    </span>
-          <span class="content">
-                        <span class="zag">Когда менять расходники?</span>
-                        <span
-                          class="text">Рассмотрим советы, которые помогут <br>продлить срок службы автомобилей</span>
-                    </span>
-        </a>
-      </div>
-      <div class="item" data-rubric1="teg4" data-rubric2="teg6" data-rubric3="teg7">
-        <a routerLink="articles">
-                    <span class="img">
-                        <img src="assets/img/img16.jpeg" alt="">
-                    </span>
-          <span class="teg">
-                        <span>Безопасность</span>
-                        <span>ДТП</span>
-                        <span>SOS</span>
-                    </span>
-          <span class="content">
-                        <span class="zag">Что необходимо знать о первой помощи?</span>
-                        <span class="text">Разберёмся как помочь <br>и не навредить себе и окружающим</span>
-                    </span>
+            <span class="zag">{{article.title}}</span>
+            <span class="text">{{article.description}}</span>
+          </span>
         </a>
       </div>
     </div>
