--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,5 +1,8 @@
+
+<body class="articles">
 <header>
   <div class="wrapper">
+
     <div class="banner">
       <div class="img">
         <img src="assets/img/img12.jpeg" alt="">
@@ -17,12 +20,12 @@
   <div class="wrapper">
     <div class="box">
       <label class="checkbox-filter" *ngFor="let category of categories">
-        <input type="checkbox" name="teg1" class="checkbox-input">
+        <input type="checkbox" name="teg1" class="checkbox-input" (click)="addToArrayCategories(category)">
         <span class="checkbox-content">{{category}}</span>
       </label>
     </div>
     <div class="box content-wrapper">
-      <div class="item" data-rubric1="teg4" data-rubric2="teg6" *ngFor="let article of articles">
+      <div class="item pointer" data-rubric1="teg4" routerLink="/template-for-articles" data-rubric2="teg6" *ngFor="let article of filteredArticles$ | async">
         <a (click)="checkArticle(article)">
           <span class="img">
             <img [ngSrc]="article.image" alt="" fill>
