--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -1,12 +1,14 @@
+<body class="articles">
 <header>
   <div class="wrapper">
+
     <div class="banner">
       <div class="img">
-        <img alt="" src="assets/img/img24.jpeg">
+        <img src="assets/img/img24.jpeg" alt="">
       </div>
       <div class="box">
         <div class="logo">
-          <img alt="Swoosh" src="assets/img/logo1.svg">
+          <img src="assets/img/logo1.svg" alt="Swoosh">
         </div>
         <div class="text"><span>.</span>обзоры</div>
       </div>
