--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -25,7 +25,7 @@
     </div>
     <div class="box">
       <div class="item" *ngFor="let car of filteredCars$ | async ">
-        <a href="#">
+        <a  (click)="selectCar(car)">
                     <span class="img">
                         <img [alt]="car.name" [src]="car.image">
                     </span>
