--- a/src/app/life-hacks/life-hacks.component.html
+++ b/src/app/life-hacks/life-hacks.component.html
@@ -4,20 +4,19 @@
 
     <div class="banner">
       <div class="img">
-        <img src="assets/img/img19.jpeg" alt="">
+        <img src="assets/img/img19.jpg" alt="">
       </div>
       <div class="box">
-        <div class="logo">
-          <img src="assets/img/logo1.svg" alt="Swoosh">
+        <div class="text text-logo">
+          <div class="bold">b<span>eee</span>p</div><span>.</span>лайфхаки
         </div>
-        <div class="text"><span>.</span>лайфхаки</div>
       </div>
     </div>
   </div>
 </header>
 <section class="sec-9">
   <div class="wrapper">
-    <div class="box">
+    <div class="box" *ngIf="categories">
       <label class="checkbox-filter" *ngFor="let category of categories">
         <input type="checkbox" name="teg1" class="checkbox-input" (click)="addToArrayCategories(category)">
         <span class="checkbox-content">{{category}}</span>
@@ -27,14 +26,14 @@
       <div class="item pointer" data-rubric1="teg2" *ngFor="let lifeHack of filteredLifeHacks$ | async">
         <a (click)="checkLifeHack(lifeHack)">
           <span class="img">
-            <img [src]="lifeHack.icon" alt="">
+            <img *ngIf="lifeHack.icon" [src]="lifeHack.icon" alt="">
           </span>
           <span class="teg">
             <span *ngFor="let type of lifeHack.type">{{type}}</span>
           </span>
           <span class="content">
-            <span class="zag">{{lifeHack.title}}</span>
-            <span class="text">{{lifeHack.description}}</span>
+            <span class="zag" *ngIf="lifeHack.title">{{lifeHack.title}}</span>
+            <span class="text" *ngIf="lifeHack.description">{{lifeHack.description}}</span>
           </span>
         </a>
       </div>
