--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
     <div class='box'>
       <div class='left'>
         <div class='logo'>
-          <img src='assets/img/logo2.svg' alt=''>
+          <img src='assets/img/logo2.svg' class="logo-footer" alt=''>
         </div>
         <div class='item'>
           <span>Авторы</span>
