--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -5,13 +5,12 @@
 
     <div class="banner">
       <div class="img">
-        <img src="assets/img/img12.jpeg" alt="">
+        <img src="assets/img/img12.jpg" alt="">
       </div>
       <div class="box">
-        <div class="logo">
-          <img src="assets/img/logo1.svg" alt="Swoosh">
+        <div class="text text-logo">
+          <div class="bold">b<span>eee</span>p</div><span>.</span>статьи
         </div>
-        <div class="text"><span>.</span>статьи</div>
       </div>
     </div>
   </div>
