--- a/src/app/persons/persons.component.html
+++ b/src/app/persons/persons.component.html
@@ -4,13 +4,12 @@
 
     <div class="banner">
       <div class="img">
-        <img src="assets/img/img27.jpeg" alt="">
+        <img src="assets/img/img27.jpg" alt="">
       </div>
       <div class="box">
-        <div class="logo">
-          <img src="assets/img/logo1.svg" alt="Swoosh">
+        <div class="text text-logo">
+          <div class="bold">b<span>eee</span>p</div><span>.</span>личности
         </div>
-        <div class="text"><span>.</span>личности</div>
       </div>
     </div>
   </div>
