--- a/src/app/templates/template-for-life-hacks/template-for-life-hacks.component.html
+++ b/src/app/templates/template-for-life-hacks/template-for-life-hacks.component.html
@@ -5,15 +5,15 @@
     <div class="box">
     </div>
     <div class="banner">
-      <div class="teg" >
+      <div class="teg" *ngIf="lifeHack.type">
         <a href="#" *ngFor="let article of lifeHack.type">{{ article }}</a>
       </div>
-      <div class="img">
+      <div class="img" *ngIf="lifeHack.image">
         <img [src]="lifeHack.image" alt="">
       </div>
       <div class="box">
-        <div class="zag">{{lifeHack.title}}</div>
-        <div class="text">
+        <div class="zag" *ngIf="lifeHack.title">{{lifeHack.title}}</div>
+        <div class="text" *ngIf="lifeHack.subTitle">
           <p>{{lifeHack.subTitle}}</p>
           <a href="#">поделиться</a>
         </div>
@@ -24,7 +24,7 @@
 <section class="sec-7">
   <div class="wrapper">
     <div class="title">Самое важное</div>
-    <div class="box">
+    <div class="box" *ngIf="lifeHack.important">
       <div class="item" *ngFor="let important of lifeHack.important">
         <div class="num">{{ important.number }}</div>
         <div class="zag">{{ important.title }}</div>
@@ -34,36 +34,36 @@
     </div>
   </div>
 </section>
-<section class="sec-8">
+<section class="sec-8" *ngIf="lifeHack.title2">
   <div class="wrapper">
     <!-- Начало статьи -->
-    <div class="title">{{ lifeHack.title2?.name }}</div>
+    <div class="title"  *ngIf="lifeHack.title2?.name">{{ lifeHack.title2?.name }}</div>
     <div class="box">
       <div class="left">
-        <div class="zag">{{ lifeHack.title2?.title }}</div>
-        <div class="text">{{ lifeHack.title2?.subtitle }}
+        <div class="zag" *ngIf="lifeHack.title2?.title">{{ lifeHack.title2?.title }}</div>
+        <div class="text" *ngIf="lifeHack.title2?.subtitle">{{ lifeHack.title2?.subtitle }}
         </div>
-        <div class="zag">{{ lifeHack.title2?.title2 }}</div>
-        <div class="text">{{ lifeHack.title2?.subtitle2 }}
+        <div class="zag" *ngIf="lifeHack.title2?.title2">{{ lifeHack.title2?.title2 }}</div>
+        <div class="text" *ngIf="lifeHack.title2?.subtitle2">{{ lifeHack.title2?.subtitle2 }}
         </div>
       </div>
-      <div class="right">
+      <div class="right" *ngIf="lifeHack.title2?.img">
         <img [src]="lifeHack.title2?.img" alt="">
       </div>
     </div>
-    <div class="blockquote">{{lifeHack.text}}
+    <div class="blockquote" *ngIf="lifeHack.text">{{lifeHack.text}}
     </div>
-    <div class="title">{{ lifeHack.title3?.name }}</div>
+    <div class="title" *ngIf="lifeHack.title3?.name">{{ lifeHack.title3?.name }}</div>
     <div class="box">
       <div class="left">
-        <div class="zag">{{ lifeHack.title3?.title }}</div>
-        <div class="text">{{ lifeHack.title3?.subtitle }}
+        <div class="zag" *ngIf="lifeHack.title3?.title">{{ lifeHack.title3?.title }}</div>
+        <div class="text" *ngIf="lifeHack.title3?.subtitle">{{ lifeHack.title3?.subtitle }}
         </div>
-        <div class="zag">{{ lifeHack.title3?.title2 }}</div>
-        <div class="text">{{ lifeHack.title3?.subtitle2 }}
+        <div class="zag" *ngIf="lifeHack.title3?.title2">{{ lifeHack.title3?.title2 }}</div>
+        <div class="text" *ngIf="lifeHack.title3?.subtitle2">{{ lifeHack.title3?.subtitle2 }}
         </div>
       </div>
-      <div class="right">
+      <div class="right" *ngIf="lifeHack.title3?.img">
         <img [src]="lifeHack.title3?.img" alt="">
       </div>
     </div>
