--- a/src/app/templates/template-for-cars/template-for-cars.component.html
+++ b/src/app/templates/template-for-cars/template-for-cars.component.html
@@ -106,7 +106,7 @@
     <!-- Начало статьи -->
     <div class="box">
       <div class="left">
-        <img [src]="car.block3?.image" alt="">
+        <img class="radius" [src]="car.block3?.image" alt="">
       </div>
       <div class="right">
         <div class="title">{{ car.block3?.title }}</div>
